# tju-python

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  RELEASING.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: examples.md  index.md  mcp.md  quickstart.md  tui.md
docs/api/: client.md  exceptions.md  models.md  parsers.md  session.md
examples/: demo.py  fetch_all_courses.py  fetch_schedule.py
src/tju/: __init__.py  config.py  consts.py  encrypt.py  exceptions.py  fields.py  schema.py  session.py  utils.py
src/tju/client/: __init__.py  base.py
src/tju/client/api/: __init__.py  classroom.py  course.py  exam.py  profile.py  schedule.py  score.py
src/tju/mcp/: __init__.py  __main__.py  redact.py  server.py
src/tju/models/: __init__.py  base.py  classroom.py  common.py  course.py  exam.py  profile.py  schedule.py  score.py
src/tju/parser/: __init__.py  classroom.py  course.py  exam.py  profile.py  schedule.py  score.py
src/tju/tui/: __init__.py  __main__.py  app.py  app.tcss  config.py  render.py  widgets.py
src/tju/tui/screens/: __init__.py  login.py  main.py
tests/: test_encrypt.py  test_mcp_redact.py  test_mcp_server.py  test_parser.py  test_schema.py  test_tui_app.py  test_tui_config.py
tests/resources/parsed/: parsed_course_gs_1.json  parsed_course_info.json  parsed_course_syllabus.md  parsed_course_ug.json  parsed_course_ug_2.json  parsed_course_ug_3.json  parsed_course_ug_4.json  parsed_course_ug_5.json  parsed_exam.json  parsed_free_classroom_1.json  parsed_schedule_ug_class.json  parsed_schedule_ug_std.json  parsed_score_exp.json  parsed_score_history_gs.json  parsed_score_history_ug.json  parsed_score_search_gs.json  parsed_score_search_ug.json
tests/resources/response/: parsed_course.json  parsed_profile_ug.json  parsed_schedule_ug_std_single.json
tests/resources/serialized/: serialized_course_ug.json  serialized_exam.json  serialized_free_classroom_1.json  serialized_profile_ug.json  serialized_score_exp.json  serialized_score_history_gs.json  serialized_score_history_ug.json  serialized_score_search_gs.json  serialized_score_search_ug.json
tests/resources/website/: course_gs_1.html  course_info.html  course_ug.html  course_ug_2.html  course_ug_3.html  course_ug_4.html  course_ug_5.html  exam.html  exam_post.html  free_classroom_1.html  profile_ug.html  schedule_ug_class.html  schedule_ug_std.html  score_exp.html  score_history_gs.html  score_history_ug.html  score_search_gs.html  score_search_ug.html
