[project]
name = "tju"
version = "0.1.0"
description = "The Python TJU client"
authors = [
    { name = "Super Lee", email = "hi@repus.me" }
]
dependencies = [
    "ddddocr>=1.5.5",
    "fake-useragent>=1.5.1",
    "httpx>=0.27.2",
    "pyexecjs>=1.5.1",
    "marshmallow>=3.22.0",
    "marshmallow-dataclass>=8.7.1",
    "markdownify>=0.13.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/superpung/tju-python"
Repository = "https://github.com/superpung/tju-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tju"]
