[project]
name = "tju"
version = "0.1.0"
description = "The Python TJU client — scrapes TJU SSO + EAMS for structured academic data"
authors = [
    { name = "Super Lee", email = "hi@repus.me" }
]
license = "GPL-3.0-or-later"
keywords = ["tju", "tianjin university", "eams", "academic", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ddddocr>=1.5.5",
    "fake-useragent>=1.5.1",
    "httpx>=0.27.2",
    "pyexecjs>=1.5.1",
    "marshmallow>=3.22.0",
    "marshmallow-dataclass>=8.7.1",
    "markdownify>=0.13.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.urls]
Homepage = "https://github.com/superpung/tju-python"
Repository = "https://github.com/superpung/tju-python"
Documentation = "https://superpung.github.io/tju-python/"
Changelog = "https://github.com/superpung/tju-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/superpung/tju-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tju"]
