[project]
name = "tju"
version = "0.1.2"
description = "The Python TJU client — scrapes TJU SSO + EAMS for structured academic data"
authors = [
    { name = "Super Lee", email = "hi@repus.me" }
]
license = "GPL-3.0-or-later"
keywords = ["tju", "tianjin university", "eams", "academic", "scraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ddddocr>=1.5.5",
    "fake-useragent>=1.5.1",
    "httpx>=0.27.2",
    "pyexecjs>=1.5.1",
    "marshmallow>=3.22.0",
    "marshmallow-dataclass>=8.7.1",
    "markdownify>=0.13.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.urls]
Homepage = "https://github.com/tjuse/tju-python"
Repository = "https://github.com/tjuse/tju-python"
Documentation = "https://python.tjuse.com/"
Changelog = "https://github.com/tjuse/tju-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/tjuse/tju-python/issues"

[project.scripts]
tju = "tju.tui:main"
tju-mcp = "tju.mcp:main"

[project.optional-dependencies]
tui = [
    "keyring>=24",
    "platformdirs>=4",
    "textual>=0.60",
    "tomli-w>=1",
]
mcp = [
    "mcp>=1.2",
    "keyring>=24",
    "platformdirs>=4",
    "tomli-w>=1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anyio[trio]>=4.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tju"]
